fixed center align issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,7 @@
 * {
     box-sizing: border-box;
     font-family: 'Times New Roman', Times, serif;
-    text-align: center;
+    text-align: left;
     font-size: 1.1rem;
 }
 .start-btn{
